--- a/index.html
+++ b/index.html
@@ -4,11 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
+
+    <!-- font style added-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+
+    <!-- css file added -->
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
 
     <!-- header part -->
     <header>
+
+        <!-- navbar -->
+        <nav>
+            <!-- logo-text -->
+            <h3 class="nav-title">Ma<span style="color: #FD6E0A;">r</span>y</h3>
+            <!-- nav-list-items -->
+            <ul>
+                <li><a href="" class="items">Portfolio</a></li>
+                <li><a href="" class="items">Blog</a></li>
+                <li><button class="btn-primary">Hire Me</button></li>
+            </ul>
+        </nav>
 
     </header>
     <!-- main part -->
@@ -17,7 +40,7 @@
     </main>
     <!-- footer part -->
     <footer>
-        
+
     </footer>
     
 </body>
