--- a/index.html
+++ b/index.html
@@ -32,9 +32,25 @@
                 <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
+        <!-- banner part -->
+        <div class="banner">
+            <div class="banner-description">
+                <h3 class="banner-greeting">Hi, I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
+                </p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <div class="banner-img">
+                <img src="./images/hardy.png" alt="Mary Hardy's Photo">
+            </div>
+
+        </div>
 
     </header>
     <!-- main part -->
+
     <main>
 
     </main>
