--- a/index.html
+++ b/index.html
@@ -131,6 +131,80 @@
             </div>
         </section>
 
+        <!-- resume section -->
+        <section class="">
+            <h3 class="section-title">A summary of My Resume</h3>
+
+            <div class="resume-container">
+                <!-- 1 no column -->
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+
+                    <div class="resume-item">
+                        <h4 class="resume-item-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-item-institute">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="resume-item-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-item-institute">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="resume-item-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-item-institute">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- 2 column -->
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+
+                    <div class="resume-item">
+                        <h4 class="resume-item-title">Sr. Font End Developer</h4>
+                        <h5 class="resume-item-institute">Apple Inc / 2020 - Current</h5>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+               
+                <hr>
+                <div class="resume-item">
+                    <h4 class="resume-item-title">Jr. Font End Developer</h4>
+                    <h5 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h5>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h4 class="resume-item-title">HTML Developer</h4>
+                    <h5 class="resume-item-institute">Adobe Inc / 2017 - 2018</h5>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+                </div>
+
+            </div> 
+
+            </div>
+            <!-- download button -->
+            <div class="resume-btn">
+                <button class="btn-primary">Download CV</button>
+            </div>
+            
+        </section>
+
+
     </main>
     <!-- footer part -->
     <footer>
