--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
     <!-- css file added -->
     <link rel="stylesheet" href="styles/portfolio.css">
+    <!-- font awesome link added -->
+    <script src="https://kit.fontawesome.com/64bf242837.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -43,8 +46,8 @@
                 <p class="banner-p">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
                     because as to society behaved moments.
                 </p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"> <i class="fa-solid fa-phone"></i> Contact</button>
             </div>
 
             <img class="banner-img" src="./images/hardy.png" alt="Mary Hardy's Photo">
@@ -199,7 +202,7 @@
             </div>
             <!-- download button -->
             <div class="resume-btn">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
             </div>
 
         </section>
